Bug 58325 - Not clear which font warning label about TrueType/screen/missing fonts refers to
Summary: Not clear which font warning label about TrueType/screen/missing fonts refers to
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-15 08:31 UTC by Urmas
Modified: 2012-12-20 21:25 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Urmas 2012-12-15 08:31:05 UTC
Font tab of Character Format dialog has a warning label about TrueType/screen fonts. It is not clear which font it does refer to (there is three lists of fonts and each one can have several semicolon-separated alternatives listed.) 
Stop copying Microsoft design slavishly.
Comment 1 m_a_riosv 2012-12-15 14:22:45 UTC
I can not see.
Win7x64
LibreOffice Version 4.0.0.0.beta1 (Build ID: 87906242e87d3ddb2ba9827818f2d1416d80cc7)

Can you detail your OS,
and attach an screenshot where to see the warning label.
Comment 2 Caolán McNamara 2012-12-20 21:22:16 UTC
I actually removed that label, mostly because it was unclear as to what font it referred to. Which is why  mariosv can't see it. I've now restored it because of bug 58373 where it was wanted back. So the problem of "what font is it talking about" is back again with tools->options->language->CTL/CJK on.

I'll give each category its own label. Which at least solves that issue.
FWIW that font-warning-label is around for approx a decade I think.
Comment 3 Not Assigned 2012-12-20 21:24:38 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=94f21050aefc56769e49022c6444fd8cd8a4f37d

Resolves: fdo#58325 give each font category a separate info label



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.