Resolves: fdo#58325 give each font category a separate info label

Change-Id: I1cc38341c2a9d28ab275765e488e5dac334ca0fa